--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "AILSS-plugin",
+	"name": "AILSS",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "AILSS plugin for Obsidian",
+	"author": "Kyoungho Eom",
+	"authorUrl": "https://github.com/kheee512",
+	"fundingUrl": "",
 	"isDesktopOnly": false
 }
