--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "id": "AILSS-plugin",
   "name": "AILSS",
-  "version": "2.42.01",
+  "version": "3.00.01",
   "minAppVersion": "0.15.0",
-  "description": "AILSS plugin for Obsidian",
+  "description": "Adaptive Intelligent Learning System",
   "author": "Kyoungho Eom",
   "authorUrl": "https://github.com/kheee512",
   "fundingUrl": "",
